# usc-signal-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.example.yaml  docker-compose.yml  main.py  pyproject.toml
scripts/: deploy.sh
tests/: test_commands.py  test_usc_retry.py
usc_signal_bot/: __init__.py  bot.py  commands.py  config.py  usc.py
