[project]
name = "usc-signal-bot"
version = "0.1.0"
description = "Signal messenger bot for USC gym reservations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "signalbot>=0.10.1",  # Signal messenger bot framework
    "pyyaml>=6.0.1",     # For config file parsing
    "httpx>=0.25.0",     # For making HTTP requests to USC's system
    "beautifulsoup4>=4.12.0",  # For parsing USC's website
    "pydantic>=2.10.6",  # For config validation
    "dateparser==1.2.1",  # For natural language date parsing
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "types-PyYAML>=6.0.12.12",  # Type stubs for PyYAML
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
strict = true 